--- a/app/src/main/res/layout/fragment_convert_bucket_list.xml
+++ b/app/src/main/res/layout/fragment_convert_bucket_list.xml
@@ -12,6 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <Spinner
+            android:id="@+id/source_measure_units_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/convert_recyclerView"
             android:layout_width="match_parent"
