--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         tools:context=".MainActivity">
 
 
@@ -31,25 +34,25 @@
 
         <EditText
             android:id="@+id/value_edit_text"
+            onFocusChangedListener="@{viewModel.onFocusChangedListener}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
-            android:hint="@string/edit_number_hint"
             android:autofillHints="@string/edit_number_hint"
             android:ems="2"
+            android:hint="@string/edit_number_hint"
             android:inputType="numberDecimal"
+            android:text="@{viewModel.mainViewStateLiveData.component1()}"
             android:textAlignment="center"
             android:textSize="36sp"
-            android:text="@{viewModel.mainViewStateLiveData.component1()}"
             app:layout_constraintBottom_toTopOf="@+id/fragment_container"
             app:layout_constraintEnd_toStartOf="@+id/toggleButton"
             app:layout_constraintStart_toEndOf="@+id/convert_title"
             app:layout_constraintTop_toTopOf="parent"
-            app:textChangedListener="@{viewModel.valueWatcher}"
-            tools:text="55,5" />
+            app:textChangedListener="@{viewModel.valueWatcher}" />
 
 
 
