--- a/app/src/main/res/layout/fragment_convert_bucket_list.xml
+++ b/app/src/main/res/layout/fragment_convert_bucket_list.xml
@@ -21,7 +21,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/convert_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            onScrollListener="@{viewModel.onScrollListener}"/>
 
     </LinearLayout>
 
