--- a/app/src/main/res/layout/list_item_convert_bucket.xml
+++ b/app/src/main/res/layout/list_item_convert_bucket.xml
@@ -10,7 +10,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/layout_stroke_convert_bucket"
+        android:layout_margin="8dp">
 
         <TextView
             android:id="@+id/source_unit_name_textView"
@@ -68,9 +70,9 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
             android:paddingStart="4dp"
-            android:paddingBottom="4dp"
             android:paddingTop="4dp"
             android:paddingEnd="4dp"
+            android:paddingBottom="4dp"
             android:text="@{viewModel.bucketViewState.component3()}"
             android:textAlignment="center"
             android:textSize="24sp"
