--- a/app/src/main/res/layout/list_item_convert_bucket.xml
+++ b/app/src/main/res/layout/list_item_convert_bucket.xml
@@ -23,11 +23,11 @@
             android:paddingTop="4dp"
             android:paddingEnd="4dp"
             android:paddingBottom="4dp"
-            android:text="@{viewModel.bucketViewState.component1()}"
             android:textAlignment="center"
             android:textColor="@android:color/darker_gray"
             android:textSize="18sp"
             android:textStyle="italic"
+            setTextFromStringResourceName="@{viewModel.bucketViewState.component1()}"
             app:layout_constraintBottom_toTopOf="@+id/down_arrow_imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
             android:paddingTop="4dp"
             android:paddingEnd="4dp"
             android:paddingBottom="4dp"
-            android:text="@{viewModel.bucketViewState.component3()}"
+            setTextFromStringResourceName="@{viewModel.bucketViewState.component3()}"
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold"
