--- a/app/src/main/res/layout/list_item_convert_bucket.xml
+++ b/app/src/main/res/layout/list_item_convert_bucket.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/layout_stroke_convert_bucket"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+        onLongClickListener="@{viewModel.onLongClickListener}">
 
         <TextView
             android:id="@+id/source_unit_name_textView"
