--- a/app/src/main/res/layout/fragment_no_value.xml
+++ b/app/src/main/res/layout/fragment_no_value.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--TODO вот этот стиль текста лучше вынести в ресурсы стилей (R.style), т.к. он два раза используется-->
         <TextView
             android:id="@+id/guide_textView"
             android:layout_width="0dp"
@@ -21,5 +21,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
