Todo's fixed. Implemented currency conversion feature. Possible bug: Does not handle network errors yet. Big refactoring. Added basic dependency injection. Localized to RU.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,8 +51,9 @@
             app:layout_constraintEnd_toStartOf="@+id/toggleButton"
             app:layout_constraintStart_toEndOf="@+id/convert_title"
             app:layout_constraintTop_toTopOf="parent"
-            app:onFocusChangeListener="@{viewModel.onFocusChangeListener}"
+            closeKeyboardOnFocusChanged="@{true}"
             textChangedListener="@{viewModel.valueWatcher}" />
+<!--            app:onFocusChangeListener="@{viewModel.onFocusChangeListener}"-->
 
         <ToggleButton
             android:id="@+id/toggleButton"
